--- a/food-menu.html
+++ b/food-menu.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Mali:ital@1&family=Parisienne&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="menu-cont">
     <!-- header section -->
     <div class="title">
         <h1>EAT AT COFFEE CLUB</h1>
@@ -60,6 +61,8 @@
         <img  class="photo" src="images/porridgeBowl.jfif" alt="">
         
     </div>
-    <script src="app.js"></script>
+    
+</div>
+<script src="app.js"></script>
 </body>
 </html>
